# django-easy-formset

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: tests.yml
easy_formset/: apps.py  forms.py
easy_formset/static/easy_formset/: easy_formset.css  easy_formset.js
tests/: conftest.py  forms.py  settings.py  test_formset.py  test_nested_formset.py  urls.py  wsgi.py
tests/testapp/: admin.py  models.py  views.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/: formset.html  formset_events.html  modelformset.html  modelformset2.html  nestedinlineformset.html  nestedmodelformset.html
tests/testapp/templates/forms/: address_form.html  animal_form.html  food_form.html  person_form.html  thing_form.html
tests/testapp/templates/formsets/: address_formset.html  food_formset.html  things_formset.html
