[metadata]
name = django-easy-formset
version = 0.1.3
description = Django Formsets with ECMAScript 6.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/CleitonDeLima/django-easy-formset
author = Cleiton de Lima
author_email = cleiton.limapin@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = easy_formset
